--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
 }
-h1 { margin: 0.5em auto; }
+h1 { margin: 0.5em auto; text-align: center;}
 .shadow5 { box-shadow: 0px 0px 5px black; }
 .radius { border-radius: 5px; }
 .bord-ridge-radius
@@ -57,7 +57,7 @@ h1 { margin: 0.5em auto; }
     display: flex;
     flex-direction: row;
 }
-.annee, .argent { width: 18%; }
+.annee, .argent { width: 18%;display: flex;flex-direction: column;justify-content: space-around; }
 .titre { width: 64%; }
 /********DRAPEAU*********/
 .flag
@@ -123,7 +123,7 @@ h1 { margin: 0.5em auto; }
 {
     margin-top: 1.5em;
 }
-
+.barre-production{overflow: hidden;}
 .avancement
 {
     width: 0%;
