--- a/style.css
+++ b/style.css
@@ -98,7 +98,10 @@ h1 { margin: 0.5em auto; text-align: center;}
     left: 0;
     width: 10em;
 }
-
+/************MENU************/
+.icone{
+    padding: 20px;
+}
 /************CONTENT**************/
 .content
 {
@@ -130,14 +133,14 @@ h1 { margin: 0.5em auto; text-align: center;}
     background: #8D0801;
     color: white;
 }
-.production
+button
 {
     color: #8D0801;
     font-weight: bold;margin-right: 10px;
     padding: 5px;
     transition: 0.5s;
 }
-.production:hover
+button:hover
 {
     box-shadow: none;
 }
@@ -172,7 +175,7 @@ h1 { margin: 0.5em auto; text-align: center;}
 .barre-production
 {
     width: 100%;
-    height: 30%;
+    height: 25px;
     border: 3px ridge white;
     margin: 0.5px auto;
 }
