--- a/style.css
+++ b/style.css
@@ -89,6 +89,12 @@ h1 { margin: 0.5em auto; text-align: center;}
     margin-bottom: 1.5em;
     overflow:hidden ;
     position: relative;
+    display: flex;
+    flex-direction: row;
+}
+.infos {
+    width: 50%;
+    height: 10em;
 }
 .gif
 {
