--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Fredericka the Great', cursive;
+    /* border: solid 1px red; */
 }
 .main
 {
@@ -24,7 +25,6 @@
     display: flex;
     flex-direction: column;
 }
-h1 { margin: 0.5em auto; text-align: center;}
 .shadow5 { box-shadow: 0px 0px 5px black; }
 .radius { border-radius: 5px; }
 .bord-ridge-radius
@@ -51,6 +51,8 @@ h1 { margin: 0.5em auto; text-align: center;}
 {
     height: 4em;
     margin-bottom: 1.5em;
+    display:flex;
+    align-items: center;
 }
 .header, .flag
 {
@@ -58,18 +60,20 @@ h1 { margin: 0.5em auto; text-align: center;}
     flex-direction: row;
 }
 .annee, .argent { width: 18%;display: flex;flex-direction: column;justify-content: space-around; }
-.titre { width: 64%; }
+.titre { width: 64%;height: 5em;position: relative; }
 /********DRAPEAU*********/
 .flag
 {
     border:  3px ridge white ;
-    width: 30%;
-    height: 50px;
+    width: 40%;
+    height: 100%;
+    position: absolute;
 }
 .blue, .red, .white { width: 33.33%; }
 .blue { background: #708d81; }
 .white { background:#f4d58d; }
 .red { background: #bf0603; }
+h1 { margin: 0.5em auto;color: black; text-align: center;position: absolute;z-index: 999;}
 
 /*************INFORMATIONS**************/
 .informations
@@ -106,15 +110,11 @@ h1 { margin: 0.5em auto; text-align: center;}
 }
 .container-button
 {
-    display: flex!important;
-    flex-direction: column;
-    align-content: center !important;
-    align-items: center;
     border: solid 1px red;
-    height: 100px;
+    position: absolute;
+    right: 0;
     width: 100px;
-    position: relative;
-    ;
+    height: 100%;
 }
 .hidden{
     display: none;
@@ -123,7 +123,8 @@ h1 { margin: 0.5em auto; text-align: center;}
 .visible{
     display: block;
     position: relative;
-    height: 25px;
+    width: 100%;
+    height: 25%;
     margin: 5px 0;
 }
 /************MENU************/
@@ -154,24 +155,10 @@ h1 { margin: 0.5em auto; text-align: center;}
 {
     margin-top: 1.5em;
 }
-.barre-production{overflow: hidden;}
-.avancement
-{
-    width: 0%;
-    background: #8D0801;
-    color: white;
-}
-button
-{
-    color: #8D0801;
-    font-weight: bold;margin-right: 10px;
-    padding: 5px;
-    transition: 0.5s;
-}
-button:hover
-{
-    box-shadow: none;
-}
+.barre-production{overflow: hidden;width:100%;height:1.5em!important;}
+.avancement{width: 0%;background: #8D0801;color: white;line-height: 1.5em!important;}
+button{color: #8D0801;font-weight: bold;margin-right:10px;padding:5px;transition:0.5s;}
+button:hover{box-shadow: none;}
 /************PATES**************/
 .section
 {
@@ -189,6 +176,7 @@ button:hover
 }
 .infos-production
 {
+    width: 60%;
     height: 100%;
     display: flex;
     flex-direction: column;
