--- a/style.css
+++ b/style.css
@@ -116,13 +116,18 @@ h1 { margin: 0.5em auto;font-size:1.5rem;color:black;text-align:center;position:
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-content: flex-end;
+    justify-content: space-between;
+   
     
 }
 .section button
 {
     position: relative !important;
     margin: 0;
+    width: 100%;
+}
+#button-shop,#button-field,#button-factory,#button-bourse{
+    display: none;
 }
 #shop,#factory,#field,#bourse{
     display: none;
@@ -132,9 +137,6 @@ h1 { margin: 0.5em auto;font-size:1.5rem;color:black;text-align:center;position:
 }
 .visible{
     display: block;
-    width: 100%;
-    height: 25%;
-    margin: 5px 0;
 }
 /************MENU************/
 .icone{
