--- a/style.css
+++ b/style.css
@@ -1,18 +1,5 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Fredericka the Great', cursive;
-    /* border: solid 1px red; */
-}
-.main
-{
-    background: #001427;
-    width: 100%;
-    padding: 2em 0;
-    height: 100vh;
-}
+*{margin: 0;padding: 0;box-sizing: border-box;font-family: 'Fredericka the Great', cursive;}
+.main{background: #001427;width: 100%;padding: 2em 0;height: 100vh;}
 .board
 {
     background: #f4d58d;
@@ -25,27 +12,12 @@
     display: flex;
     flex-direction: column;
 }
-.shadow5 { box-shadow: 0px 0px 5px black; }
-.radius { border-radius: 5px; }
-.bord-ridge-radius
-{
-    border: 3px ridge white;
-    border-radius: 5px;
-}
-.flewrow
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.flexcol
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.center { text-align: center; }
+.shadow5{box-shadow: 0px 0px 5px black;}
+.radius{border-radius: 5px;}
+.bord-ridge-radius{border: 3px ridge white;border-radius: 5px;}
+.flexrow{display: flex;flex-direction: row;justify-content: space-around;}
+.flexcol{display: flex;flex-direction: column;justify-content: space-around;align-items: center;}
+.center{text-align: center;}
 /***********HEADER***********/
 .header
 {
@@ -75,6 +47,7 @@
 .red { background: #bf0603; }
 h1 { margin: 0.5em auto;font-size:1.5rem;color:black;text-align:center;position: absolute;z-index: 999;}
 
+#title-stock {display:flex;flex-direction:column;justify-content:space-around;height:100%;padding:2px 5px;background:white;border-radius:2px;}
 /*************INFORMATIONS**************/
 .informations
 {
@@ -153,6 +126,8 @@ h1 { margin: 0.5em auto;font-size:1.5rem;color:black;text-align:center;position:
     height: 60vh;
     background: #708d81;
     overflow-y: auto ;
+    scrollbar-color: #bf0603#f4d58d;
+    scrollbar-width: thin;
 }
 .menu{
     display: flex;
