--- a/style.css
+++ b/style.css
@@ -1,210 +1,73 @@
-*{margin: 0;padding: 0;box-sizing: border-box;font-family: 'Fredericka the Great', cursive;}
-.main{background: #001427;width: 100%;padding: 2em 0;height: 100vh;}
-.board
-{
-    background: #f4d58d;
-    width: 50%;
-    max-width: 80%;
-    height: 90vh;
-    margin: auto;
-    padding: 1.5em;
-    border: solid 3px white;
-    display: flex;
-    flex-direction: column;
-}
-.shadow5{box-shadow: 0px 0px 5px black;}
-.radius{border-radius: 5px;}
-.bord-ridge-radius{border: 3px ridge white;border-radius: 5px;}
-.flexrow{display: flex;flex-direction: row;justify-content: space-around;}
-.flexcol{display: flex;flex-direction: column;justify-content: space-around;align-items: center;}
-.center{text-align: center;}
+/***********GENERAL**********/
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Fredericka the Great',cursive;}
+.main{background:#001427;width:100%;padding:2em 0;height:100vh;}
+.board{background:#f4d58d;width:50%;max-width:80%;height:90vh;margin:auto;padding:1.5em;border:solid 3px white;display:flex;flex-direction:column;}
+.shadow5{box-shadow:0px 0px 10px #001427;}
+.radius{border-radius:5px;}
+.bord-ridge-radius{border:3px ridge white;border-radius:5px;}
+.flexrow{display:flex;flex-direction:row;justify-content:space-around;}
+.flexcol{display:flex;flex-direction:column;justify-content:space-around;align-items:center;}
+.center{text-align:center;}
+
 /***********HEADER***********/
-.header
-{
-    height: 4em;
-    margin-bottom: 1.5em;
-    display:flex;
-    align-items: center;
-}
-.header, .flag
-{
-    display: flex;
-    flex-direction: row;
-}
-.annee, .argent { width: 18%;display: flex;flex-direction: column;justify-content: space-around; }
-.titre { width: 64%;height: 5em;position: relative; }
+.header{height:4em;margin-bottom:1.5em;display:flex;align-items:center;}
+.header, .flag{display:flex;flex-direction:row;}
+.annee, .argent{width:18%;display:flex;flex-direction:column;justify-content:space-around;}
+.titre{width:64%;height:5em;position:relative;}
+
 /********DRAPEAU*********/
-.flag
-{
-    border:  3px ridge white ;
-    width: 40%;
-    height: 100%;
-    position: absolute;
-}
-.blue, .red, .white { width: 33.33%; }
-.blue { background: #708d81; }
-.white { background:#f4d58d; }
-.red { background: #bf0603; }
-h1 { margin: 0.5em auto;font-size:1.5rem;color:black;text-align:center;position: absolute;z-index: 999;}
+.flag{border:3px ridge white;width:40%;height:100%;position:absolute;}
+.blue, .red, .white{width:33.33%;}
+.blue{background:#708d81;}
+.white{background:#f4d58d;}
+.red{background:#bf0603;}
+h1{margin:0.5em auto;font-size:1.5rem;color:black;text-align:center;position:absolute;z-index:999;}
+#title-stock{display:flex;flex-direction:column;justify-content:space-around;height:100%;padding:2px 5px;background:white;border-radius:2px;box-shadow: 0px 2px 15px #001427;}
 
-#title-stock {display:flex;flex-direction:column;justify-content:space-around;height:100%;padding:2px 5px;background:white;border-radius:2px;}
 /*************INFORMATIONS**************/
-.informations
-{
-    width: 100%;
-    height: 3em;
-    background: silver;
-}
+.informations{width:100%;height:3em;background:silver;}
+
 /************SCREEN*************/
-.screen
-{
-    width: 100%;
-    height: 10em;
-    background: #afafaf;
-    margin: 0.5em auto;
-    text-align: center;
-    margin-bottom: 1.5em;
-    overflow:hidden ;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-}
-.infos {
-    width: 50%;
-    height: 10em;
-}
+.screen{width:100%;height:10em;background:#afafaf;margin:0.5em auto;text-align:center;margin-bottom:1.5em;overflow:hidden;position:relative;display:flex;flex-direction:row;}
+.infos{width:50%;height:10em;}
+#production,#stock{overflow:auto;}
+.gif{width:100%;height:100%;position:absolute;left:0;width:10em;}
+.container-button{position:absolute;right:0;width:100px;height:100%;display:flex;flex-direction:column;justify-content:space-between;}
+.section button{position:relative !important;margin:0;width:100%;}
 
-#production,#stock{
-    
-    overflow: auto;
-}
-.gif
-{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    width: 10em;
-}
-.container-button
-{
-    position: absolute;
-    right: 0;
-    width: 100px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-   
-    
-}
-.section button
-{
-    position: relative !important;
-    margin: 0;
-    width: 100%;
-}
-/* #button-shop,#button-field,#button-factory,#button-bourse{
-    display: none;
-} */
-#shop,#factory,#field,#bourse{
-    display: none;
-}
-.hidden{
-    display: none;
-}
-.visible{
-    display: block;
-}
+/* #button-shop,#button-field,#button-factory,#button-bourse{display:none;} */
+#shop,#factory,#kitchen,#bourse{display:none;}
+.hidden{display:none;}
+.visible{display:block;}
+
 /************MENU************/
-.icone{
-    padding: 20px;
-}
+.icone{padding:20px;}
+
 /************CONTENT**************/
-.content
-{
-    height: 60vh;
-    background: #708d81;
-    overflow-y: auto ;
-    scrollbar-color: #bf0603#f4d58d;
-    scrollbar-width: thin;
-}
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-.icone{
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    border: 2px ridge white;
+.content{height:60vh;background:#708d81;overflow-y:auto;scrollbar-color:#bf0603#f4d58d;scrollbar-width:thin;}
+.menu{display:flex;flex-direction:row;justify-content:space-around;margin-top:20px;}
+.icone{width:50px;height:50px;border-radius:50px;border:2px ridge white;}
+.control{margin-top:1.5em;}
+.barre-production{overflow:hidden;width:100%;height:1.5em!important;}
+.avancement{width:0%;background:#8D0801;color:white;line-height:1.5em!important;}
+button{color:#8D0801;font-weight:bold;margin-right:10px;padding:5px;transition:0.5s;}
+button:hover{box-shadow:none;}
+#prod{transition:1s;}
 
-}
-.control
-{
-    margin-top: 1.5em;
-}
-.barre-production{overflow: hidden;width:100%;height:1.5em!important;}
-.avancement{width: 0%;background: #8D0801;color: white;line-height: 1.5em!important;}
-button{color: #8D0801;font-weight: bold;margin-right:10px;padding:5px;transition:0.5s;}
-button:hover{box-shadow: none;}
 /************PATES**************/
-.section
-{
-    width: 90%;
-    height: 7em;
-    border: 5px ridge white;
-    border-radius: 5px;
-    margin: 1em auto 0 auto;
-    background: #f4d58d;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-.infos-production
-{
-    width: 60%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+.section{width:90%;height:7em;border:5px ridge white;border-radius:5px;margin:1em auto 0 auto;background:#f4d58d;position:relative;display:flex;
+flex-direction:row;align-items:center;justify-content:center;}
+.infos-production{width:60%;height:100%;display:flex;flex-direction:column;justify-content:space-around;align-items:center;}
+.section button{position:absolute;right:0;}
+.barre-production{width:100%;height:25px;border:3px ridge white;margin:0.5px auto;}
+.section img{position:absolute;left:0;width:100px;}
+.action{position:absolute;right:0;width:100px;background:#8D0801;color:white;}
 
-}
-.section button{
-    position: absolute;
-    right: 0;
-}
-.barre-production
-{
-    width: 100%;
-    height: 25px;
-    border: 3px ridge white;
-    margin: 0.5px auto;
-}
-.section img
-{
-    position: absolute;
-    left: 0;
-    width: 100px;
-}
-.action
-{
-    position: absolute;
-    right: 0;
-    width: 100px;
-    background: #8D0801;
-    color: white;
-}
 /***********MEDIA QUERRIES************/
 @media screen and (max-width: 1280px) {
-    .board{ width: 90%; }
-    h1{ font-size: 1.5rem; }
-    h2{ font-size: 1.2rem; }
-    h3{ font-size: 1rem; }
-    .barre-production { height: 20%;}
+    .board{width:90%;}
+    h1{font-size:1.5rem;}
+    h2{font-size:1.2rem;}
+    h3{font-size:1rem;}
+    .barre-production{height:20%;}
 }
